--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,177 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.lotte.imitate_weipinhui.support.view.MyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.lotte.imitate_weipinhui.MainActivity">
 
-    <LinearLayout
+    <com.lotte.imitate_weipinhui.support.view.MyScrollView
+        android:id="@+id/my_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:id="@+id/activity_main"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v7.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@color/white">
-
-            </android.support.v7.widget.Toolbar>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:src="@mipmap/back" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="个人中心"
-                    android:textColor="@color/text_black" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:src="@mipmap/settings" />
-            </RelativeLayout>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:background="@mipmap/bg" />
-        </RelativeLayout>
-
-        <View style="@style/divider" />
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="90dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/activity_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:background="@mipmap/bg" />
+            </RelativeLayout>
+
+            <View style="@style/divider" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:background="@color/white">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="待付款"
+                    android:textColor="@color/text_black" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="待收货"
+                    android:textColor="@color/text_black" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="全部订单"
+                    android:textColor="@color/text_black" />
+            </LinearLayout>
+
+            <View style="@style/divider_16dp" />
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="待付款"
-                android:textColor="@color/text_black" />
+                style="@style/text_item"
+                android:text="我的资产" />
+
+            <View style="@style/divider_16dp" />
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="待收货"
-                android:textColor="@color/text_black" />
+                style="@style/text_item"
+                android:text="我的特卖" />
+
+            <View
+                style="@style/divider"
+                android:layout_marginLeft="16dp" />
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="全部订单"
-                android:textColor="@color/text_black" />
+                style="@style/text_item"
+                android:text="生活小助手" />
+
+            <View
+                style="@style/divider"
+                android:layout_marginLeft="16dp" />
+
+            <TextView
+                style="@style/text_item"
+                android:text="会员俱乐部" />
+
+            <View style="@style/divider_16dp" />
+
+            <TextView
+                style="@style/text_item"
+                android:text="账户与安全" />
+
+            <View
+                style="@style/divider"
+                android:layout_marginLeft="16dp" />
+
+            <TextView
+                style="@style/text_item"
+                android:text="唯品客服" />
+
+            <View style="@style/divider_16dp" />
+
+            <TextView
+                style="@style/text_item"
+                android:text="关于唯品" />
+
+            <View
+                style="@style/divider"
+                android:layout_marginLeft="16dp" />
+
+            <TextView
+                style="@style/text_item"
+                android:text="设置" />
         </LinearLayout>
+    </com.lotte.imitate_weipinhui.support.view.MyScrollView>
 
-        <View style="@style/divider_16dp" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/white">
+
+    </android.support.v7.widget.Toolbar>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp">
+
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:src="@mipmap/back" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:text="我的资产"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="个人中心"
             android:textColor="@color/text_black" />
 
-        <View style="@style/divider_16dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
+        <ImageView
+            android:id="@+id/iv_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:paddingLeft="16dp"
-            android:text="我的特卖"
-            android:textColor="@color/text_black" />
+            android:paddingRight="16dp"
+            android:src="@mipmap/settings" />
+    </RelativeLayout>
 
-        <View
-            style="@style/divider"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:text="生活小助手"
-            android:textColor="@color/text_black" />
-
-        <View
-            style="@style/divider"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:text="会员俱乐部"
-            android:textColor="@color/text_black" />
-
-        <View style="@style/divider_16dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:text="账户与安全"
-            android:textColor="@color/text_black" />
-
-        <View
-            style="@style/divider"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:text="唯品客服"
-            android:textColor="@color/text_black" />
-
-        <View style="@style/divider_16dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:text="关于唯品"
-            android:textColor="@color/text_black" />
-
-        <View
-            style="@style/divider"
-            android:layout_marginLeft="16dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:text="设置"
-            android:textColor="@color/text_black" />
-    </LinearLayout>
-</com.lotte.imitate_weipinhui.support.view.MyScrollView>
+    <View
+        android:id="@+id/divider0"
+        style="@style/divider"
+        android:layout_below="@+id/toolbar"
+        android:visibility="invisible" />
+</RelativeLayout>
