--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,13 @@
         <item name="android:background">@color/bg_color</item>
     </style>
 
+    <style name="text_item">
+        <item name="android:background">@color/white</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:textColor">@color/text_black</item>
+    </style>
+
 </resources>
