--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     <com.lotte.imitate_weipinhui.support.view.MyScrollView
         android:id="@+id/my_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,6 +25,82 @@
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
                     android:background="@mipmap/bg" />
+
+                <RelativeLayout
+                    android:id="@+id/rl_un_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/tv_register"
+                        style="@style/text_in_header"
+                        android:paddingRight="16dp"
+                        android:text="注册" />
+
+                    <View
+                        android:id="@+id/divider1"
+                        style="@style/divider_vertical"
+                        android:layout_alignBottom="@+id/tv_login"
+                        android:layout_alignTop="@+id/tv_register"
+                        android:layout_toRightOf="@+id/tv_register"
+                        android:background="@color/text_dark_gray" />
+
+                    <TextView
+                        android:id="@+id/tv_login"
+                        style="@style/text_in_header"
+                        android:layout_toRightOf="@+id/divider1"
+                        android:paddingLeft="16dp"
+                        android:text="登录" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:id="@+id/iv_header"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_centerHorizontal="true"
+                        android:src="@mipmap/default_header" />
+
+                    <TextView
+                        android:id="@+id/tv_vip_level"
+                        style="@style/text_in_header"
+                        android:layout_below="@+id/iv_header"
+                        android:layout_centerHorizontal="true"
+                        android:paddingTop="18dp"
+                        android:text="铁牌会员" />
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_vip_level"
+                        android:paddingTop="18dp">
+
+                        <TextView
+                            android:id="@+id/tv_nickname"
+                            style="@style/text_in_header"
+                            android:layout_centerHorizontal="true"
+                            android:text="Lotte" />
+
+                        <TextView
+                            android:id="@+id/tv_vip_club"
+                            android:layout_width="70dp"
+                            android:layout_height="22dp"
+                            android:layout_alignParentRight="true"
+                            android:background="@drawable/vip_club_shape"
+                            android:gravity="center"
+                            android:text="会员俱乐部 >"
+                            android:textColor="@color/white"
+                            android:textSize="10sp" />
+                    </RelativeLayout>
+                </RelativeLayout>
             </RelativeLayout>
 
             <View style="@style/divider" />
@@ -137,6 +214,7 @@
             android:src="@mipmap/back" />
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
