--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="text_black">#bb000000</color>
     <color name="text_dark_gray">#88000000</color>
     <color name="text_gray">#22000000</color>
+
+    <color name="vip_club_color">#aaaa0000</color>
 </resources>
